--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "npx netlify dev",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
+    "netlify-cli": "^23.13.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "vite": "^7.3.0"
